# Howm

./: .gitignore  README.md  howm.sh
.github/workflows/: ci.yml  release.yml
.todo/done/: 2578b6a9.json  43edcd43.json  77268bc4.json  b25aecff.json  ba58cb26.json
.todo/open/: 2578b6a9.json  43edcd43.json  76106223.json  77268bc4.json  86923fde.json  af885685.json  b25aecff.json  ba58cb26.json
capabilities/feed/: Cargo.toml  capability.yaml  manifest.json
capabilities/feed/src/: api.rs  blob_fetcher.rs  db.rs  main.rs  posts.rs
capabilities/feed/ui/: feed.css  feed.js
capabilities/files/: Cargo.toml  manifest.json
capabilities/files/src/: api.rs  db.rs  main.rs
capabilities/files/src/api/: mod.rs  rpc.rs  tests.rs
capabilities/files/ui/: files.css  files.js  index.html
capabilities/messaging/: Cargo.toml  manifest.json
capabilities/presence/: Cargo.toml  manifest.json
capabilities/presence/src/: api.rs  gossip.rs  main.rs  peers.rs  state.rs
capabilities/presence/ui/: index.html  presence.css  presence.js
capabilities/social-feed/: Cargo.toml  Dockerfile  capability.yaml  manifest.json
capabilities/voice/: Cargo.toml  manifest.json
capabilities/voice/src/: api.rs  bridge.rs  main.rs  notifier.rs  signal.rs  state.rs
capabilities/voice/ui/: index.html  voice.css  voice.js
capabilities/wallet/: Cargo.toml  manifest.json
capabilities/wallet/src/: api.rs  crypto.rs  db.rs  main.rs
capabilities/wallet/src/chain/: evm.rs  mod.rs
capabilities/wallet/ui/: index.html
capabilities/world/: Cargo.toml  manifest.json
capabilities/world/astral-src/src/: entry.ts
capabilities/world/astral-src/src/core/: description.ts  types.ts
capabilities/world/astral-src/src/glyph/: GlyphDB.ts
capabilities/world/astral-src/src/renderer/: DescribedEntity.ts  FrameBuffer.ts  Lighting.ts  Presenter.ts  Raymarch.ts  RenderLoop.ts  SequenceEngine.ts  SpatialGrid.ts  TraitController.ts  World.ts  sdf.ts
capabilities/world/astral-src/src/scene/: GenerativeSceneProvider.ts  HowmSceneProvider.ts  HowmStreamProvider.ts  RemoteSceneProvider.ts  SceneProvider.ts
capabilities/world/astral-src/src/ui/: HUD.ts
capabilities/world/src/: main.rs  types.rs
capabilities/world/src/hdl/: mapping.rs  mod.rs  traits.rs
capabilities/world/src/scene/: compiler.rs  geometry.rs  map.rs  material.rs  mod.rs
capabilities/world/src/stream/: handler.rs  mod.rs  protocol.rs  view.rs
capabilities/world/ui/: astral.js  index.html
data/: api_token  network_index.json  node.json  pending_invites.json
data/wireguard/: address  addresses.json  private_key  public_key  wg0.conf
docs/: AUDIT.md  CI_CD.md  DOCKERLESS.md  DOCKERLESS_SPEC.md  GET_IT_WORKING.md  IP6_INVITE.md  LANSPEC.md  MATCHMAKE_RELAY.md  NETWORKING_FINAL.md  OPENINVITE.md  P2PCD_DATA.md  P2PCD_STREAM.md  P2PCD_V4_SOCIAL_RETRO.md  P2PCD_WORK.md  REARCH.md  UI_CORE.md  V4_MIGRATION_PLAN.md  WIREGUARD_NAT.md  insideOutside.md  p2pcd-core-capability-catalog.md  p2pcd-poc-config.md
docs/access/: BRD-access-control.md  PLAN-access-control.md  SPEC-access-control-implementation.md  SPEC-ui-peer-management.md
docs/cap-sdk/: PROGRESS.md  TASKS.md
docs/files/: AXUM-VERSION.md  BRD-003-file-transfer.md  BRD-file-transfer.md  MULTIPART_FIX.md  REVIEW-file-transfer.md  TASKS-003-file-transfer.md  TASKS-file-transfer.md  UI-DESIGN-files.md
docs/lan/: review.md
docs/msg/: BRD-002-peer-messaging.md  ISOLATE_UI_NOTIFICATION_SPEC.md  TASKS-002-peer-messaging.md  TASKS-ISOLATE-UI.md  WIP-002-peer-messaging.md
docs/old/: CONNECTION_PAGE.md  NETWORK_AUDIT.md  P2PCD_PROGRESS.md  P2PCD_STREAM.md  P2PCD_WORK.md  PHASE5_UX_POLISH.md  p2pcd-poc-config.md
docs/peer-cap/: ARCH_REVIEW.md  SUMMARY.md  SUMMARY_FIXES.md  peer-cap-arch-plan.md  peer-cap-arch.md  peer-capability-review.md  r2.md
docs/presence/: SPEC.md
docs/profiles/: profiles.md  tasks.md
docs/qa/: .ALPHA-REVIEW.md.kate-swp  2026-03-25-token-security-review.md  ALPHA-REVIEW.md  bugs-20260424.txt
docs/social/: BRD-001-enhanced-social-feed.md  COMPLETE-media-attachments.md  IMPL-001-enhanced-social-feed.md  TASKS-001-enhanced-social-feed.md
docs/style/: ASSESSMENT.md  SPEC.md
docs/testing/: nat-punch-integration.md
docs/ui-review/: HOLISTIC-REVIEW.md  UI-ENHANCEMENTS.md
docs/voice/: SPEC.md  TASKS.md
docs/wallet/: DESIGN.md  TASKS.md
node/: Cargo.toml
node/access/: Cargo.toml
node/access/src/: db.rs  lib.rs  schema.rs  types.rs
node/daemon/: Cargo.toml  build.rs
node/daemon/src/: accept.rs  auth.rs  capabilities.rs  config.rs  discovery.rs  docker.rs  embedded_ui.rs  error.rs  executor.rs  health.rs  identity.rs  invite.rs  lan_discovery.rs  lib.rs  main.rs  matchmake.rs  net_detect.rs  notifications.rs  open_invite.rs  peers.rs  profile.rs  profile_sync.rs  proxy.rs  prune.rs  punch.rs  state.rs  stun.rs  tailnet.rs  watchdog.rs  wireguard.rs
node/daemon/src/api/: access_routes.rs  auth_layer.rs  capability_routes.rs  connection_routes.rs  lan_routes.rs  mod.rs  network_routes.rs  node_routes.rs  notification_routes.rs  p2pcd_routes.rs  profile_routes.rs  proxy_routes.rs  settings_routes.rs
node/daemon/src/connectivity/: lan_discovery.rs  mod.rs  punch.rs
node/daemon/src/p2pcd/: bridge.rs  cap_notify.rs  engine.rs  event_bus.rs  heartbeat.rs  mod.rs  session.rs  transport.rs
node/daemon/src/p2pcd/bridge/: blob.rs  events.rs  messaging.rs  mod.rs  peers.rs
node/daemon/src/p2pcd/capabilities/: attest.rs  blob.rs  endpoint.rs  event.rs  heartbeat.rs  latency.rs  mod.rs  peerexchange.rs  relay.rs  rpc.rs  timesync.rs
node/daemon/src/p2pcd/engine/: lan_hints.rs  mod.rs  peer_cache.rs  session_runner.rs  teardown.rs
node/daemon/tests/: integration.rs  punch_integration.rs
node/p2pcd/: Cargo.toml
node/p2pcd/src/: blob_store.rs  bridge_client.rs  cap_db.rs  capability_sdk.rs  cbor_helpers.rs  heartbeat.rs  lib.rs  mux.rs  session.rs  transport.rs
node/p2pcd/src/capabilities/: attest.rs  blob.rs  endpoint.rs  event.rs  heartbeat.rs  latency.rs  mod.rs  peerexchange.rs  relay.rs  rpc.rs  stream.rs  timesync.rs
ui/web/: index.html  (+3 more)
(+109 files in other folders)
