[package]
name = "feed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "feed"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
include_dir = "0.7"
base64 = "0.22"
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
p2pcd = { path = "../../node/p2pcd", features = ["bridge-client", "cap-db"] }

[dev-dependencies]
tempfile = "3"
