[package]
name = "voice"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voice"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
parking_lot = "0.12"
include_dir = "0.7.4"
futures-util = "0.3"
