[package]
name = "world"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "world"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
p2pcd = { path = "../../node/p2pcd", features = ["bridge-client"] }
include_dir = "0.7"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
