[package]
name = "howm-access"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
