[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "daemon"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
bollard = "0.17"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
base64 = "0.22"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
futures-util = "0.3"
hostname = "0.3"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
