[package]
name = "howm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "howm"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.29", features = ["signal", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tower-http = { version = "0.5", features = ["cors", "fs"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
rand = "0.8"
base64 = "0.22"
toml = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
hmac = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
p2pcd-types = { path = "../p2pcd-types" }
include_dir = "0.7"

hostname = "0.3"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
