[package]
name = "p2pcd"
version = "0.1.0"
edition = "2021"
description = "P2P Capability Discovery protocol engine — transport, sessions, and capability handlers"

[dependencies]
p2pcd-types = { path = "../p2pcd-types" }
anyhow = "1"
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "macros", "rt"] }
tracing = "0.1"
base64 = "0.22"
hex = "0.4"
ciborium = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
